# dlfs_cpp

./: CMakeLists.txt  LICENSE  main.cpp
data/inference_param/: ch03_mnist_weights.json  dumps_weight.py
include/ch01/: eigen_demo.hpp
include/ch02/: perceptron.hpp
include/ch03/: inference.hpp
include/ch04/: nn_study.hpp
include/ch05/: computational_graph.hpp
src/ch01/: eigen_demo.cpp
src/ch02/: perceptron.cpp
src/ch03/: inference.cpp
src/ch04/: nn_study.cpp
src/ch05/: computational_graph.cpp
